restore prev settings

--- a/arch/arm/configs/kminilte_00_defconfig
+++ b/arch/arm/configs/kminilte_00_defconfig
@@ -493,7 +493,7 @@ CONFIG_SEC_DEBUG_FUPLOAD_DUMP_MORE=y
 # CONFIG_SEC_DEBUG_TIMERQUEUE_CORRUPTION is not set
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
-CONFIG_SEC_LOG_LAST_KMSG=y
+# CONFIG_SEC_LOG_LAST_KMSG is not set
 CONFIG_SEC_AVC_LOG=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_SEC_DEBUG_TIMA_LOG=y
@@ -3059,7 +3059,7 @@ CONFIG_INV_MPU_IIO=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_LOGGER is not set
+CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_PERSISTENT_RAM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 # CONFIG_PERSISTENT_TRACER is not set
@@ -3266,7 +3266,7 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLB_PAGE is not set
-CONFIG_CONFIGFS_FS=y
+CONFIG_CONFIGFS_FS
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
@@ -3464,10 +3464,10 @@ CONFIG_DEBUG_USER=y
 #
 # Disable this as it interferes with TWRP adb.
 #
-# CONFIG_SEC_RESTRICT_ROOTING is not set
-# CONFIG_SEC_RESTRICT_SETUID is not set
-# CONFIG_SEC_RESTRICT_FORK is not set
-# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
+#CONFIG_SEC_RESTRICT_ROOTING=y
+#CONFIG_SEC_RESTRICT_SETUID=y
+#CONFIG_SEC_RESTRICT_FORK=y
+#CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 
 #
 # Security options
@@ -3596,7 +3596,6 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
-CONFIG_CRYPTO_LZ4=y
 
 #
 # Random Number Generation
